fix the wrapping, nextFeature(MediaQuery for mobile size)

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -29,6 +29,7 @@ section {
 	.box-wrapper {
 		padding-top: 100px;
 		width: 33%;
+		min-width: 250px;
 		.box-header {
 			display: flex;
 			justify-content: center;
